2017-05-04  Mark Lam  <mark.lam@apple.com>

        DRT's setAudioResultCallback() and IDBRequest::setResult() need to acquire the JSLock.
        https://bugs.webkit.org/show_bug.cgi?id=171716
        <rdar://problem/30878027>

        Reviewed by Saam Barati.

        setAudioResultCallback() needs to acquire the JSLock before calling toJS() (which
        does JS conversion and therefore, potentially JS allocations) and accessing
        methods of internal JS data structures (which may do JS invocation, etc).

        * DumpRenderTree/TestRunner.cpp:
        (setAudioResultCallback):

2017-05-05  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] TestController timeout source callback should return G_SOURCE_REMOVE
        https://bugs.webkit.org/show_bug.cgi?id=171724

        Reviewed by Michael Catanzaro.

        It's currently returning CONTINUE which causes it to be called again even if the run loop has been stopped.

        * WebKitTestRunner/gtk/TestControllerGtk.cpp:
        (WTR::timeoutSource):

2017-05-04  Konstantin Tokarev  <annulen@yandex.ru>

        Fix compilation with ICU 59.1
        https://bugs.webkit.org/show_bug.cgi?id=171612

        Reviewed by Mark Lam.

        ICU 59.1 has broken source compatibility. Now it defines UChar as
        char16_t, which does not allow automatic type conversion from unsigned
        short in C++ code.

        * TestRunnerShared/UIScriptContext/UIScriptContext.cpp:
        (UIScriptContext::tryToCompleteUIScriptForCurrentParentCallback):

2017-05-07  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GTK] Cannot sign in with new Google sign-in page
        https://bugs.webkit.org/show_bug.cgi?id=171770

        Unreviewed. This just adds a test.

        * TestWebKitAPI/Tests/WebCore/UserAgentQuirks.cpp:
        (TestWebKitAPI::TEST):

2017-05-03  Michael Catanzaro  <mcatanzaro@igalia.com>

        YouTube user agent quirk breaks new YouTube
        https://bugs.webkit.org/show_bug.cgi?id=171603
